--- a/src/app/add-item-form/add-item-form.component.html
+++ b/src/app/add-item-form/add-item-form.component.html
@@ -1,18 +1,34 @@
-<form>
+<form #itemForm="ngForm" (ngSubmit)="onSubmit(itemForm)">
   <div class="field is-horizontal">
     <div class="field-body" style="justify-content: center;">
        <div class="field is-narrow">
          <p class="control">
-           <input type="number" style="width: 100px" class="input" placeholder="Amount">
+           <input type="number"
+                  name="amount"
+                  style="width: 100px"
+                  class="input"
+                  placeholder="Amount"
+                  [ngModel]="item.amount"
+                  required>
          </p>
        </div>
        <div class="field is-narrow">
         <p class="control">
-          <input type="text" class="input" placeholder="Description">
+          <input type="text"
+                 name="description"
+                 class="input"
+                 placeholder="Description"
+                 [ngModel]="item.description"
+                 required>
         </p>
       </div>
       <div class="field is-narrow">
-        <button class="button is-primary" disabled="true">Add</button>
+        <button type="submit"
+                [ngClass]="{'is-primary' : isNewItem, 'button is-success' : !isNewItem }"
+                [disabled]="!itemForm.valid">
+                <p *ngIf="isNewItem">Add</p>
+                <p *ngIf="!isNewItem">Save</p>
+        </button>
       </div>
     </div>
   </div>
