--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -3,15 +3,27 @@
     <div class="income-column">
       <h1>Income</h1>
       <div class="budget-box">
-        <app-budget-item-box [isIncome]="true"></app-budget-item-box>
-        <app-budget-item-box [isIncome]="true"></app-budget-item-box>
+        <div *ngFor="let item of budgetItems">
+            <app-budget-item-box
+            *ngIf="item.amount >= 0"
+            style="display: block;"
+            [item]="item"
+            (xButtonClick)="onDeleteButtonClicked(item)"
+            (boxClick)="onBoxClick(item)"></app-budget-item-box>
+        </div>
       </div>
     </div>
     <div class="expenses-column">
       <h1>Expenses</h1>
       <div class="budget-box">
-        <app-budget-item-box [isIncome]="false"></app-budget-item-box>
-        <app-budget-item-box [isIncome]="false"></app-budget-item-box>
+          <div *ngFor="let item of budgetItems">
+              <app-budget-item-box
+              *ngIf="item.amount <= 0"
+              style="display: block;"
+              [item]="item"
+              (xButtonClick)="onDeleteButtonClicked(item)"
+              (boxClick)="onBoxClick(item)"></app-budget-item-box>
+          </div>
       </div>
     </div>
   </div>
